[RW-707][risk=low] Update Account Success Page (#967)
* first pass

* trying diff strategy

* no idea what i am doing

* argggh lint

* i really do not get it

* i really do not get it pass 2

* ok got it

* lint clean up

* first attempt to fix tests

* forgot about quotes

* more test fixing

* adding in email

* almost there

* getting stuck

* verifying email before saving

* fix for lint

* oops

* what I get for rushing

* grrr, ok really hopes this works

* no real progress

* fix for lint

* more changes

* fixing imports for lint

* also in public

* formatting

* fix create

* fix resend welcome email

* move mail sending on create to profile controller

* refactoring, tests

* refactoring, tests

* fix test; refactor to use resources

* add component

* cleanup

* lint

* cleanup

* cleanup

* PR feedback

* adding nonce

* passing lint

* Revert "passing lint"

This reverts commit e2fad1ba85b2a5f50f7b83195515172e564abce3.

* Revert "adding nonce"

This reverts commit d5972ca6421e131ccf7400ab15e7cbcd0cac006e.

* addressing some PR comments

* tweaking

* more tweaks

* more tweaks

* fixing for codacy

* replacing somethings lost in merge conflicts

* adding password reset to updating contact email

* lots of fixes

* forgot to remove this unneeded input

* forgot to remove this too

* cleaning up for codacy

* fixing tests

* refactoring api methods

* forgot semicolon

* fix for prod configs

* more typos

* getting return types right

* fix for tests

* further PR comments

--- a/api/config/config_local.json
+++ b/api/config/config_local.json
@@ -22,6 +22,7 @@
   },
   "googleCloudStorageService": {
     "credentialsBucketName": "all-of-us-workbench-test-credentials",
+    "emailImagesBucketName": "all-of-us-workbench-test-email-images",
     "demosBucketName": "all-of-us-workbench-test-demos"
   },
   "googleDirectoryService": {
@@ -32,6 +33,7 @@
     "projectId": "all-of-us-workbench-test"
   },
   "admin": {
+    "loginUrl": "http:\/\/localhost:4200/login",
     "adminIdVerification": "manual-id-verification-requests@fake-research-aou.org"
   },
   "jira": {
