--- a/api/config/config_stable.json
+++ b/api/config/config_stable.json
@@ -21,6 +21,7 @@
   },
   "googleCloudStorageService": {
     "credentialsBucketName": "all-of-us-rw-stable-credentials",
+    "emailImagesBucketName": "all-of-us-workbench-test-email-images",
     "demosBucketName": "all-of-us-rw-stable-demos"
   },
   "googleDirectoryService": {
@@ -31,6 +32,7 @@
     "projectId": "all-of-us-rw-stable"
   },
   "admin": {
+    "loginUrl": "http:\/\/all-of-us-workbench-stable.appspot.com/login",
     "adminIdVerification": "manual-id-verification-requests@fake-research-aou.org"
   },
   "jira": {
