--- a/api/config/config_staging.json
+++ b/api/config/config_staging.json
@@ -32,7 +32,7 @@
     "projectId": "all-of-us-rw-staging"
   },
   "admin": {
-    "loginUrl": "http:\/\/all-of-us-workbench-staging.appspot.com/login",
+    "loginUrl": "http:\/\/all-of-us-rw-staging.appspot.com/login",
     "adminIdVerification": "manual-id-verification-requests@fake-research-aou.org"
   },
   "jira": {
