--- a/common-api/build.gradle
+++ b/common-api/build.gradle
@@ -27,17 +27,17 @@ dependencies {
   compile 'com.google.guava:guava:25.1-jre'
   compile 'org.hibernate:hibernate-ehcache:5.0.12.Final'
   compile 'org.apache.commons:commons-lang3:3.0'
-  compile('org.springframework.boot:spring-boot-starter-web:2.0.3.RELEASE') {
+  compile('org.springframework.boot:spring-boot-starter-web') {
     exclude module: 'spring-boot-starter-tomcat'
     exclude group: 'org.slf4j', module: 'jul-to-slf4j'
   }
-  compile('org.springframework.boot:spring-boot-starter-data-jpa:2.0.3.RELEASE') {
+  compile('org.springframework.boot:spring-boot-starter-data-jpa') {
     exclude module: 'spring-boot-starter-tomcat'
     exclude group: 'org.slf4j', module: 'jul-to-slf4j'
   }
 
   testCompile 'junit:junit:4.12'
-  testCompile 'org.mockito:mockito-core:2.19.1'
+  testCompile 'org.mockito:mockito-core:1.10.19'
   testCompile 'com.google.truth:truth:0.42'
   testCompile 'com.h2database:h2:1.4.197'
   testCompile 'org.liquibase:liquibase-core:3.6.2'
