--- a/common-api/build.gradle
+++ b/common-api/build.gradle
@@ -27,15 +27,34 @@ dependencies {
   compile 'com.google.guava:guava:25.1-jre'
   compile 'org.hibernate:hibernate-ehcache:5.0.12.Final'
   compile 'org.apache.commons:commons-lang3:3.0'
-  compile('org.springframework.boot:spring-boot-starter-web') {
+  compile('org.springframework.boot:spring-boot-starter-web:2.0.3.RELEASE') {
     exclude module: 'spring-boot-starter-tomcat'
     exclude group: 'org.slf4j', module: 'jul-to-slf4j'
+    exclude module: 'spring-webmvc'
+    exclude module: 'spring-web'
+    exclude module: 'com.fasterxml.jackson.core:jackson-databind'
   }
   compile('org.springframework.boot:spring-boot-starter-data-jpa') {
     exclude module: 'spring-boot-starter-tomcat'
     exclude group: 'org.slf4j', module: 'jul-to-slf4j'
+    exclude module: 'spring-data-commons'
   }
 
+  compile('org.springframework.boot:spring-boot-starter-logging') {
+    exclude module: 'ch.qos.logback:logback-classic'
+  }
+
+  compile('ch.qos.logback:logback-classic:1.3.0-alpha4') {
+    exclude module: 'ch.qos.logback:logback-core'
+  }
+
+  compile('org.springframework:spring-webmvc:5.1.+') {
+    exclude module: 'spring-web'
+  }
+  compile 'org.springframework:spring-web:5.1.+'
+  compile 'ch.qos.logback:logback-core:1.3.0-alpha4'
+  compile 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
+  compile 'org.springframework.data:spring-data-commons:1.13.11.RELEASE'
   testCompile 'junit:junit:4.12'
   testCompile 'org.mockito:mockito-core:1.10.19'
   testCompile 'com.google.truth:truth:0.42'
