--- a/public-api/build.gradle
+++ b/public-api/build.gradle
@@ -97,9 +97,12 @@ dependencies {
   compile 'com.google.cloud.sql:mysql-socket-factory:1.0.10'
   compile 'com.google.appengine:appengine:1.9.64'
   compile 'com.google.appengine:appengine-api-1.0-sdk:1.9.64'
-  compile('org.springframework.boot:spring-boot-starter-web') {
+  compile('org.springframework.boot:spring-boot-starter-web:2.0.3.RELEASE') {
     exclude module: 'spring-boot-starter-tomcat'
     exclude group: 'org.slf4j', module: 'jul-to-slf4j'
+    exclude module: 'spring-webmvc'
+    exclude module: 'spring-web'
+    exclude module: 'com.fasterxml.jackson.core:jackson-databind'
   }
   compile('org.springframework.boot:spring-boot-starter-data-jpa') {
     exclude module: 'spring-boot-starter-tomcat'
@@ -109,11 +112,16 @@ dependencies {
     exclude module: 'spring-boot-starter-tomcat'
     exclude group: 'org.slf4j', module: 'jul-to-slf4j'
   }
-  compile 'org.springframework.security:spring-security-web:5.0.6.RELEASE'
 
-  compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.5'
-  compile 'com.fasterxml.jackson.core:jackson-core:2.9.5'
-  compile 'com.fasterxml.jackson.core:jackson-databind:2.9.5'
+  compile('org.springframework.boot:spring-boot-starter-logging') {
+    exclude module: 'ch.qos.logback:logback-classic'
+  }
+
+  compile('ch.qos.logback:logback-classic:1.3.0-alpha4') {
+    exclude module: 'ch.qos.logback:logback-core'
+  }
+  compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.6'
+  compile 'com.fasterxml.jackson.core:jackson-core:2.9.6'
   compile 'joda-time:joda-time:2.10'
   compile 'javax.inject:javax.inject:1'
   compile 'io.swagger:swagger-annotations:1.5.16'
@@ -122,6 +130,13 @@ dependencies {
 
   // https://github.com/GoogleCloudPlatform/google-cloud-java/issues/1502
   compile 'org.json:json:20160810'
+  compile('org.springframework:spring-webmvc:5.1.+') {
+    exclude module: 'spring-web'
+  }
+  compile 'org.springframework:spring-web:5.1.+'
+  compile 'ch.qos.logback:logback-core:1.3.0-alpha4'
+  compile 'com.fasterxml.jackson.core:jackson-databind:2.9.6'
+  compile 'org.springframework.data:spring-data-commons:1.13.11.RELEASE'
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.mockito:mockito-core:1.10.19'
