[RW-982][RW-987][RW-984][risk=no] API calls for meds search (#1032)
* RW-982 adding api calls for meds.

* RW-982 fix to ambiguous paths.

* RW-982, RW-987 and RW-984 finished all api calls for meds.

* RW-982, RW-987, RW-984 corrected a misspelling.

* [RW-707][risk=low] Update Account Success Page (#967)

* first pass

* trying diff strategy

* no idea what i am doing

* argggh lint

* i really do not get it

* i really do not get it pass 2

* ok got it

* lint clean up

* first attempt to fix tests

* forgot about quotes

* more test fixing

* adding in email

* almost there

* getting stuck

* verifying email before saving

* fix for lint

* oops

* what I get for rushing

* grrr, ok really hopes this works

* no real progress

* fix for lint

* more changes

* fixing imports for lint

* also in public

* formatting

* fix create

* fix resend welcome email

* move mail sending on create to profile controller

* refactoring, tests

* refactoring, tests

* fix test; refactor to use resources

* add component

* cleanup

* lint

* cleanup

* cleanup

* PR feedback

* adding nonce

* passing lint

* Revert "passing lint"

This reverts commit e2fad1ba85b2a5f50f7b83195515172e564abce3.

* Revert "adding nonce"

This reverts commit d5972ca6421e131ccf7400ab15e7cbcd0cac006e.

* addressing some PR comments

* tweaking

* more tweaks

* more tweaks

* fixing for codacy

* replacing somethings lost in merge conflicts

* adding password reset to updating contact email

* lots of fixes

* forgot to remove this unneeded input

* forgot to remove this too

* cleaning up for codacy

* fixing tests

* refactoring api methods

* forgot semicolon

* fix for prod configs

* more typos

* getting return types right

* fix for tests

* further PR comments

* RW-1027 strip html from selection items (#1033)

* [RW-930][risk=no] Add unregistered view and

--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -91,7 +91,7 @@ paths:
     get:
       tags:
         - cohortBuilder
-      description: Returns builder criteria tree with the specified criteria type and parentId
+      description: Returns builder criteria tree with the specified criteria type and subtype
       operationId: "getCriteriaByTypeAndSubtype"
       parameters:
         - in: path
@@ -104,6 +104,47 @@ paths:
           type: string
           required: true
           description: the specific subtype of criteria to get
+      responses:
+        200:
+          description: A collection of criteria
+          schema:
+            $ref: "#/definitions/CriteriaListResponse"
+
+  /v1/cohortbuilder/{cdrVersionId}/criteria/drug/{name}:
+    parameters:
+      - $ref: '#/parameters/cdrVersionId'
+    get:
+      tags:
+        - cohortBuilder
+      description: Returns criteria tree with the specified name
+      operationId: "getDrugBrandOrIngredientByName"
+      parameters:
+        - in: path
+          name: name
+          type: string
+          required: true
+          description: name of ingredient or brand
+      responses:
+        200:
+          description: A collection of criteria
+          schema:
+            $ref: "#/definitions/CriteriaListResponse"
+
+  /v1/cohortbuilder/{cdrVersionId}/criteria/drug/ingredient/{conceptId}:
+    parameters:
+      - $ref: '#/parameters/cdrVersionId'
+    get:
+      tags:
+        - cohortBuilder
+      description: Returns criteria tree with the specified name
+      operationId: "getDrugIngredientByConceptId"
+      parameters:
+        - in: path
+          name: conceptId
+          type: integer
+          format: int64
+          required: true
+          description: conceptId of brand
       responses:
         200:
           description: A collection of criteria
