--- a/api/build.gradle
+++ b/api/build.gradle
@@ -261,6 +261,7 @@ dependencies {
   compile('org.springframework:spring-webmvc:5.1.+') {
     exclude module: 'spring-web'
   }
+  compile('org.slf4j:jul-to-slf4j:1.8.0-beta2')
   compile 'org.springframework:spring-web:5.1.+'
   compile 'org.springframework.security:spring-security-web:5.0.6.RELEASE'
   compile 'javax.validation:validation-api:2.0.1.Final'
