--- a/api/build.gradle
+++ b/api/build.gradle
@@ -281,10 +281,10 @@ dependencies {
   compile 'org.json:json:20160810'
 
   testCompile 'junit:junit:4.12'
-  testCompile 'org.mockito:mockito-core:1.+'
+  testCompile 'org.mockito:mockito-core:1.10.19'
   testCompile "com.google.appengine:appengine-api-stubs:${GAE_VERSION}"
   testCompile "com.google.appengine:appengine-tools-sdk:${GAE_VERSION}"
-  testCompile 'com.google.truth:truth:+'
+  testCompile 'com.google.truth:truth:0.42'
   testCompile 'org.springframework.boot:spring-boot-starter-test:+'
   testCompile 'com.h2database:h2:+'
   testCompile 'org.liquibase:liquibase-core:+'
