--- a/public-api/build.gradle
+++ b/public-api/build.gradle
@@ -126,8 +126,8 @@ dependencies {
   compile 'org.json:json:20160810'
 
   testCompile 'junit:junit:4.12'
-  testCompile 'org.mockito:mockito-core:1.+'
-  testCompile 'com.google.truth:truth:+'
+  testCompile 'org.mockito:mockito-core:1.10.19'
+  testCompile 'com.google.truth:truth:0.42'
   testCompile 'org.springframework.boot:spring-boot-starter-test'
   testCompile 'com.h2database:h2:+'
   testCompile 'org.liquibase:liquibase-core:+'
