--- a/api/build.gradle
+++ b/api/build.gradle
@@ -298,9 +298,9 @@ dependencies {
   generatedCompile 'io.springfox:springfox-swagger-ui:2.6.1'
   generatedCompile 'com.squareup.okhttp:okhttp:2.6.0'
   generatedCompile 'com.squareup.okhttp:logging-interceptor:2.6.0'
-  generatedCompile 'com.google.code.gson:gson:+'
+  generatedCompile 'com.google.code.gson:gson:2.8.5'
   generatedCompile 'joda-time:joda-time:2.10'
-  generatedCompile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:+'
+  generatedCompile 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.9.6'
 
 }
 
