--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -950,6 +950,21 @@ definitions:
         REVIEW_ID_VERIFICATION
     ]
 
+  PageVisit:
+    type: object
+    properties:
+      userId:
+        type: integer
+        format: int64
+      page:
+        type: string
+      firstVisit:
+        type: integer
+        format: int64
+      lastVisit:
+        type: integer
+        format: int64
+
   WorkspaceListResponse:
     type: object
     required:
@@ -1369,6 +1384,11 @@ definitions:
         type: "array"
         items:
           $ref: "#/definitions/Authority"
+      pageVisits:
+        description: pages user has visited
+        type: "array"
+        items:
+          $ref: "#/definitions/PageVisit"
       idVerificationStatus:
         $ref: "#/definitions/IdVerificationStatus"
         description: Status of ID verification
