--- a/api/tools/build.gradle
+++ b/api/tools/build.gradle
@@ -84,6 +84,7 @@ sourceSets {
                   'org/pmiops/workbench/model/WorkspaceAccessLevel.java',
                   'org/pmiops/workbench/model/CohortStatus.java',
                   'org/pmiops/workbench/model/CohortReview.java',
+                  'org/pmiops/workbench/model/PageVisit.java',
                   'org/pmiops/workbench/model/ParticipantCohortStatus.java',
                   'org/pmiops/workbench/model/ReviewStatus.java',
                   'org/pmiops/workbench/model/UnderservedPopulationEnum.java',
